--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,8 +10,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      # Run a build step here if your project requires
+        
+      - name: Build
+        run: npm install && npm run pages:build
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
