--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.8.6",
