--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "gsap": "^3.12.5",
-    "next": "14.1.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3",
