--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3",
+    "tailwindcss-animated": "^1.0.1",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
